# euroscope-mqtt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  conanprofile  euroscope-mqtt.json.example  euroscope-mqtt.txt.example  mqtt_credentials.txt.example
.github/workflows/: build.yml  cmake-single-platform.yml
cmake/: Findeclipse-paho-mqtt-c.cmake  force_min_35.cmake
src/: Version.h.in  main.cpp  plugin.cpp  plugin.h
